kube-files/todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
spec:
  type: NodePort
  ports:
    - nodePort: 31318
      port: 4000
      protocol: TCP
      targetPort: 4000
  selector:
    app: todo-app
